MAJ scrollbar bug

--- a/css/style.css
+++ b/css/style.css
@@ -102,6 +102,7 @@ header .fa-bars{
 
 
 main .home{
+	overflow: hidden;
 	padding: 13% 5rem 0;
 }
 
@@ -131,6 +132,7 @@ main .about{
 	display: flex;
 	justify-content: right;
 	padding: 12% 5rem 0;
+	overflow: hidden;
 }
 
 main .about .punch{
@@ -162,6 +164,7 @@ main .about .punch p{
 }
 
 main .howItWorks{
+	overflow: hidden;
 	padding: 12% 5rem 0 ;
 }
 
